# VoxelRendering

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
Cube/: CMakeLists.txt
Cube/resources/shaders/glsl/basic/: basic.frag  basic.vert
Cube/resources/shaders/glsl/normal/: normal.geom  normal.vert
Cube/resources/shaders/spir-v/basic/: basic.frag
Cube/source/: main.cpp
HelloTriangle/: CMakeLists.txt
HelloTriangle/resources/shaders/glsl/basic/: basic.frag  basic.vert
HelloTriangle/source/: main.cpp
OpenGLRenderer/: CMakeLists.txt
OpenGLRenderer/include/: Buffer.h  Material.h  Mesh.h  OpenGLRenderer.h  RenderPass.h  Texture.h  VertexAttribute.h  Window.h
OpenGLRenderer/source/: .RenderPass.cpp.swp  Buffer.cpp  Material.cpp  Mesh.cpp  OpenGLRenderer.cpp  RenderPass.cpp  Texture.cpp  VertexAttribute.cpp  Window.cpp
Planet/: CMakeLists.txt
Planet/resources/shaders/glsl/basic/: basic.frag  basic.geom  basic.tesc  basic.tese  basic.vert
Planet/resources/shaders/spir-v/basic/: basic.vert
Planet/source/: main.cpp
SobelCube/: CMakeLists.txt
SobelCube/resources/shaders/glsl/basic/: basic.vert
SobelCube/resources/shaders/glsl/cube/: cube.frag  cube.vert
SobelCube/source/: main.cpp
TexturedCube/: CMakeLists.txt
TexturedCube/resources/shaders/glsl/basic/: basic.frag
TexturedCube/source/: main.cpp
Voxel/: CMakeLists.txt
Voxel/include/: ArrayHelpers.h  FileUtilities.h  Trackball.h
Voxel/source/: FileUtilities.cpp  Trackball.cpp
VoxelWorld/: CMakeLists.txt
VoxelWorld/include/: LimitedUnorderedMap.h  Mesh.h  RenderLoop.h  Shader.h  ShaderProgram.h  Tensor3.h  Texture.h  TextureAtlas.h  Vertex.h
VoxelWorld/include/voxel/: RenderChunk.h  RenderChunkGenerator.h  WorldGenerator.h  WorldRenderer.h
VoxelWorld/resources/shaders/glsl/: cube.frag  cube.vert  mesh.frag  mesh.vert  mesh_atlas.vert
VoxelWorld/resources/texture_atlas/: generate.py
VoxelWorld/source/: Mesh.cpp  RenderLoop.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  main.cpp
VoxelWorld/source/gui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
VoxelWorld/source/voxel/: RenderChunk.cpp  RenderChunkGenerator.cpp  WorldGenerator.cpp  WorldRenderer.cpp
VulkanRenderer/: CMakeLists.txt
